WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15248
Can not enter accented characters using alt-numeric keypad
https://bugs.webkit.org/show_bug.cgi?id=15248
Summary
Can not enter accented characters using alt-numeric keypad
Reinder Verlinde
Reported
2007-09-21 00:09:59 PDT
In windows, one can type characters by typing a number on the numeric keypad while holding down an alt-key. For instance, alt-130 types é. This does not work in Safari. Nothing is entered. I checked both form fields (where I need this to enter a password) and the address bar (version 3.0.3 build 522.15.5) It is not a wild guess to guess that this is Platform-specific, although the 'Reindeer' component was very tempting...
Attachments
test case
(3.07 KB, patch)
2007-12-12 03:24 PST
,
Alexey Proskuryakov
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-09-21 06:22:30 PDT
<
rdar://problem/5497032
>
Oliver Hunt
Comment 2
2007-10-26 18:00:29 PDT
I have a reasonable idea of how this would need to be implemented -- basically we'd need to implement an input manager-esque system on windows to handle this type of text entry.
Alexey Proskuryakov
Comment 3
2007-11-01 10:50:12 PDT
Windows already sends WM_CHAR messages for those, but we ignore them to do everything from WM_KEYDOWN handler.
Alexey Proskuryakov
Comment 4
2007-12-12 02:54:12 PST
Fixed in <
http://trac.webkit.org/projects/webkit/changeset/28620
>, but we need a test case. I'm working on one.
Alexey Proskuryakov
Comment 5
2007-12-12 03:24:53 PST
Created
attachment 17861
[details]
test case
Oliver Hunt
Comment 6
2007-12-12 03:32:58 PST
Comment on
attachment 17861
[details]
test case hurrah!
Alexey Proskuryakov
Comment 7
2007-12-12 03:34:45 PST
Test committed revision 28647.
Darin Adler
Comment 8
2008-02-04 17:05:25 PST
Test case looks good, but this doesn't seem to actually work in Safari.
Alexey Proskuryakov
Comment 9
2008-02-05 04:14:08 PST
Indeed, this regressed. However, the new bug is not a WebKit one (at least, part of the fix needs to be in closed source code), so I'm closing this report back. The problem will continue to be tracked by Apple internally, of course.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug