        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=15248
        <rdar://problem/5497032> Can not enter accented characters using alt-numeric keypad (take two)

        * WebView.cpp: (WebViewWndProc): KeyUp messages need to be translated, too.



git-svn-id: svn://svn.chromium.org/blink/trunk@30006 bbb929c8-8fbe-4397-9dbb-9b2b20218538