third_party/WebKit/WebKit/win/WebView.cpp
@@ -1826,7 +1826,7 @@ static LRESULT CALLBACK WebViewWndProc(HWND hWnd, UINT message, WPARAM wParam, L
         lResult = DefWindowProc(hWnd, message, wParam, lParam);
     
     // Let the client know whether we consider this message handled.
-    return (message == WM_KEYDOWN || message == WM_SYSKEYDOWN) ? !handled : lResult;
+    return (message == WM_KEYDOWN || message == WM_SYSKEYDOWN || message == WM_KEYUP || message == WM_SYSKEYUP) ? !handled : lResult;
 }
 
 bool WebView::developerExtrasEnabled() const
